# temporal-impact

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ADAPTER_GUIDE.md  ALGORITHM.md  DEVELOPMENT.md  EVENT_SCHEMA.md  INTEGRATION_GUIDE.md  RELEASE_CHECKLIST.md
examples/novel_adapter/: README.md  event.json  example.py
examples/research_change/: README.md  event.json  example.py
examples/software_change/: README.md  event.json  example.py
src/temporal_impact/: __init__.py  config.py  engine.py
src/temporal_impact/adapters/: __init__.py  base.py
src/temporal_impact/api/: __init__.py  app.py
src/temporal_impact/cli/: __init__.py  app.py
src/temporal_impact/demo/: __init__.py  app.py  scenario.py
src/temporal_impact/events/: __init__.py  ingestion.py  models.py
src/temporal_impact/graph/: __init__.py  builder.py
src/temporal_impact/impact/: __init__.py  analyzer.py  models.py
src/temporal_impact/observations/: __init__.py  engine.py  models.py
src/temporal_impact/proposals/: __init__.py  engine.py  models.py
src/temporal_impact/shadow/: __init__.py  models.py
src/temporal_impact/storage/: __init__.py  repository.py
tests/end_to_end/: test_examples.py
tests/integration/: test_api.py  test_cli_ingest.py  test_engine.py  test_storage_and_graph.py
tests/unit/: test_events.py  test_impact.py  test_package_import.py
